# antiphoria-slop-research-factory

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-codeaudit.yml  ci-tests.yml  ci-trivy.yml  gitleaks.yml
docs/architecture/: README.md  c4-components.md  c4-containers.md  c4-context.md  trust-boundaries.md
glascannon-ai-draft/: d0.md  d1.md  d2.md  d3.md  d4.md  d5.md  d6.md  d7.md  d8.md  d9.md
glascannon-ai-draft/scripts/: README.md  spec-ref-audit-report.md  spec_ref_audit.py
src/slop_research_factory/: __init__.py  config.py  config_loader.py
src/slop_research_factory/engine/: routing.py
src/slop_research_factory/nodes/: generator_node.py
src/slop_research_factory/prompts/: CHANGELOG.md  __init__.py  generator_prompt.py
src/slop_research_factory/prompts/citation_extractor/: system_v0.1.txt  user_template_v0.1.txt
src/slop_research_factory/prompts/generator/: system_v0.1.txt  user_template_v0.1.txt
src/slop_research_factory/prompts/reviser/: system_v0.1.txt  user_template_v0.1.txt
src/slop_research_factory/prompts/verifier/: system_v0.1.txt  user_template_v0.1.txt
src/slop_research_factory/types/: __init__.py  append_only.py  brief.py  confidence.py  config.py  enums.py  hai_card.py  human_rescue.py  inference.py  provenance.py  state.py  tool_types.py  transitions.py  verifier_output.py
src/slop_research_factory/workspace/: __init__.py  manager.py
tests/: test_placeholder.py
tests/integration/: test_generator_node.py
tests/unit/: test_brief.py  test_config.py  test_enums.py  test_generator_prompt.py  test_hai_card.py  test_human_rescue.py  test_inference.py  test_manager.py  test_provenance.py  test_routing.py  test_state.py  test_state_schema.py  test_tool_types.py  test_types_init.py  test_verifier_output.py
