[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antiphoria-slop-research-factory"
version = "0.1.0"
description = "Generator–Verifier–Reviser research factory with cryptographic provenance (slop-cli)."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.40.0",
    "instructor>=1.3.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "langgraph>=0.2.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    # Pinned to match antiphoria/.github org quality gate (ci/requirements-ruff.txt).
    "ruff==0.15.8",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "mypy>=1.10.0",
    "jsonschema>=4.21.0",
]
eval = [
    "matplotlib>=3.9.0",
]
production = [
    "arq>=0.26.0",
    "redis>=5.0.0",
    "streamlit>=1.35.0",
]

# D-9 §4: `antiphoria = "slop_research_factory.cli:main"` — add [project.scripts] once `src/slop_research_factory/cli.py` exists.

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py312"
extend-exclude = [
    ".venv",
    "venv",
    "build",
    "dist",
    "node_modules",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "UP", "I", "SIM", "A", "S"]
ignore = [
    "E203",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"**/tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 60

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
